--- a/index.html
+++ b/index.html
@@ -3,9 +3,144 @@
 <head>
   <meta charset="UTF-8">
   <link rel="stylesheet" href="css/style.css">
-  <title>WEB</title>
+  <title>Tinyone</title>
 </head>
 <body>
+  <div id="container">
+    <!-- Header -->
+    <div id="header">
+      <img src="img/logo.png" alt="Imagen como con una huella y la letra que dice Tinyone">
+      <ul>
+        <li>Features</li>
+        <li>Support</li>
+        <li>Blog</li>
+      </ul>
+    </div>
+    <!-- Contenido Header -->
+    <div id="conteHeader">
+      <div id="conteHeader1">
+        <h2>Inspire your inspiration</h2>
+        <h5>Simple to use for your app, products showcase and your inspiration</h5>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid sed ad provident, consequatur doloremque
+          consequuntur eveniet quis illo voluptatum perferendis nemo officiis, obcaecati repellendus ab. Ratione
+          voluptatem
+          excepturi nemo . Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa debitis, aut amet
+          earum
+          recusandae qui odit quasi consectetur nihil. Maiores dolorum deserunt facilis temporibus quos beatae dolor
+          eligendi inventore!</p>
+        <img src="img/apple.png" alt="Logo de apple">
+        <img src="img/android.png" alt="Logo de android">
+        <img src="img/window.png" alt="Logo de windown">
+      </div>
+      <div>
+        <img src="img/cell.png" alt="Imagen de un celular con el logo de la página">
+      </div>
+    </div>
+    <!-- Final de Header -->
+    <!-- Container -->
+    <div id="contenedor">
+      <h2>Tinyone features</h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nisi sit rem nemo aliquid! Sapiente aut
+        reiciendis animi, minus nulla neque necessitatibus soluta deleniti, beatae commodi iure mollitia, ipsa omnis?</p>
+      <div>
+        <img src="img/cell2.png" alt="Logo de un telefono">
+        <p>Fully Responsive</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
+          obcaecati!</p>
+      </div>
+      <div>
+        <img src="img/lemon.png" alt="Logo de un telefono">
+        <p>Fully Layered PSD</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
+          obcaecati!</p>
+      </div>
+      <div>
+        <img src="img/file.png" alt="Logo de un telefono">
+        <p>Font Awesome Icons</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
+          obcaecati!</p>
+      </div>
+      <div>
+        <img src="img/html.png" alt="Logo de un telefono">
+        <p>HTML3 & CSS3</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
+          obcaecati!</p>
+      </div>
+      <div><img src="img/message.png" alt="Logo de un telefono">
+        <p>Email Template</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
+          obcaecati!</p>
+      </div>
+      <div>
+        <img src="img/tape.png" alt="Logo de un telefono">
+        <p>Free to download</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
+          obcaecati!</p>
+      </div>
+    </div>
+    <!-- Final del Contenido -->
+    <!-- Footer -->
+    <div id="footer">
+      <h2>Keep in touch with us</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cum provident consectetur quisquam dolorum delectus amet ducimus maiores commodi aut, obcaecati soluta fuga eligendi voluptas ipsum minus. Necessitatibus, modi eaque!</p>
+      <form action="#">
+          <fieldset>
+            <input type="search" id="space" value="Enter your email to update">
+            <button id="btn" type="submit" value="submit"><i class="fa fa-search"></i></button>
+          </fieldset>
+        </form>
+        <img src="img/share.png" alt="Imagen de las redes sociales Facebook, Twiter, Google más, Pinterest">
+    </div>
+    <!-- Final del Footer -->
+    <!-- Sub Footer -->
+    <div id="subFooter">
+      <div>
+        <ul>
+          <li>HALOVIENTNAM LTD</li>
+          <li>66 Dang Van ngu,Dong Da</li>
+          <li>Hanoi,Vietnam</li>
+          <li>Contact@halovietnam.com</li>
+          <li>+884 35149182</li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li>Examples</li>
+          <li>Shop</li>
+          <li>License</li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li>Contact</li>
+          <li>About</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li>Download</li>
+          <li>Support</li>
+          <li>Documents</li>
+        </ul>
+      </div>
+      <div>
+        <ul>
+          <li>Media</li>
+          <li>Blog</li>
+          <li>Forums</li>
+        </ul>
+      </div>
+    </div>
+    <!-- Final del Sub Footer -->
+  </div>
   <script src="script.js"></script>
 </body>
 </html>
