Cambios en el sass

--- a/index.html
+++ b/index.html
@@ -10,17 +10,20 @@
     <!-- Header -->
     <div id="header">
       <img src="img/logo.png" alt="Imagen como con una huella y la letra que dice Tinyone">
-      <ul>
-        <li>Features</li>
-        <li>Support</li>
-        <li>Blog</li>
-      </ul>
+      <div class="menu0">
+        <ul class="menu">
+          <li> <a href="#">Features</a></li>
+          <li> <a href="#">Support</a></li>
+          <li> <a href="#">Blog</a></li>
+        </ul>  
+      </div>
+
     </div>
     <!-- Contenido Header -->
     <div id="conteHeader">
       <div id="conteHeader1">
-        <h2>Inspire your inspiration</h2>
-        <h5>Simple to use for your app, products showcase and your inspiration</h5>
+        <h2 class="titulos">Inspire your inspiration</h2>
+        <h5 class="titulo2">Simple to use for your app, products showcase and your inspiration</h5>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid sed ad provident, consequatur doloremque
           consequuntur eveniet quis illo voluptatum perferendis nemo officiis, obcaecati repellendus ab. Ratione
           voluptatem
