--- a/index.html
+++ b/index.html
@@ -9,83 +9,87 @@
   <div id="container">
     <!-- Header -->
     <div id="header">
-      <img src="img/logo.png" alt="Imagen como con una huella y la letra que dice Tinyone">
-      <div class="menu0">
-        <ul class="menu">
-          <li> <a href="#">Features</a></li>
-          <li> <a href="#">Support</a></li>
-          <li> <a href="#">Blog</a></li>
-        </ul>  
+      <div class="header1">
+        <img src="img/logo.png" alt="Imagen como con una huella y la letra que dice Tinyone">
+        <div class="menu0">
+          <ul class="menu">
+            <li> <a href="#">Features</a></li>
+            <li> <a href="#">Support</a></li>
+            <li> <a href="#">Blog</a></li>
+          </ul>  
+        </div>
+      </div>
+    </div>
+    <!-- Slider -->
+    <div id="slider">
+      <div class="slider1">
+        <div class="slider2">
+          <h2 class="titulos">Inspire your inspiration</h2>
+          <h5 class="titulo2">Simple to use for your app, products showcase and your inspiration</h5>
+          <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid sed ad provident, consequatur doloremque
+          consequuntur eveniet quis illo voluptatum perferendis nemo officiis, obcaecati repellendus ab. Ratione</p>
+          <img class="internet" src="img/apple.png" alt="Logo de apple">
+          <img class="internet" src="img/android.png" alt="Logo de android">
+          <img class="internet" src="img/window.png" alt="Logo de windown">
+        </div>
+        <div class="imagen">
+          <img src="img/cell.png" alt="Imagen de un celular con el logo de la página">
+      </div>
       </div>
 
-    </div>
-    <!-- Contenido Header -->
-    <div id="conteHeader">
-      <div id="conteHeader1">
-        <h2 class="titulos">Inspire your inspiration</h2>
-        <h5 class="titulo2">Simple to use for your app, products showcase and your inspiration</h5>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid sed ad provident, consequatur doloremque
-          consequuntur eveniet quis illo voluptatum perferendis nemo officiis, obcaecati repellendus ab. Ratione
-          voluptatem
-          excepturi nemo . Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas culpa debitis, aut amet
-          earum
-          recusandae qui odit quasi consectetur nihil. Maiores dolorum deserunt facilis temporibus quos beatae dolor
-          eligendi inventore!</p>
-        <img src="img/apple.png" alt="Logo de apple">
-        <img src="img/android.png" alt="Logo de android">
-        <img src="img/window.png" alt="Logo de windown">
-      </div>
-      <div>
-        <img src="img/cell.png" alt="Imagen de un celular con el logo de la página">
-      </div>
     </div>
     <!-- Final de Header -->
     <!-- Container -->
     <div id="contenedor">
-      <h2>Tinyone features</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nisi sit rem nemo aliquid! Sapiente aut
-        reiciendis animi, minus nulla neque necessitatibus soluta deleniti, beatae commodi iure mollitia, ipsa omnis?</p>
-      <div>
-        <img src="img/cell2.png" alt="Logo de un telefono">
-        <p>Fully Responsive</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+      <div class="color">
+        <h2 class="titulos espacio ">Tinyone features</h2>
+        <h5 class="titulo2 espacio2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nisi sit rem nemo aliquid! Sapiente aut
+        reiciendis animi, minus nulla neque necessitatibus</h5 >
+      </div>
+      <!-- Cajas -->
+      <div class="cajas">
+        <img class="ima" src="img/cell2.png" alt="Logo de un telefono">
+        <p class="sub">Fully Responsive</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
           necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
           obcaecati!</p>
       </div>
-      <div>
-        <img src="img/lemon.png" alt="Logo de un telefono">
-        <p>Fully Layered PSD</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+      <div class="cajas">
+        <img class="ima medida" src="img/lemon.png" alt="Logo de un telefono">
+        <p class="sub"> Fully Layered PSD</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
           necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
           obcaecati!</p>
       </div>
-      <div>
-        <img src="img/file.png" alt="Logo de un telefono">
-        <p>Font Awesome Icons</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+      <div class="cajas">
+        <img  class="ima medida2"src="img/file.png" alt="Logo de un telefono">
+        <p class="sub">Font Awesome Icons</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
           necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
           obcaecati!</p>
       </div>
-      <div>
-        <img src="img/html.png" alt="Logo de un telefono">
-        <p>HTML3 & CSS3</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+      <div class="cajas">
+        <img class="ima medida3" src="img/html.png" alt="Logo de un telefono">
+        <p class="sub">HTML3 & CSS3</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
           necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
           obcaecati!</p>
       </div>
-      <div><img src="img/message.png" alt="Logo de un telefono">
-        <p>Email Template</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+      <div class="cajas">
+        <img class="ima medida4" src="img/message.png" alt="Logo de un telefono">
+        <p class="sub">Email Template</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
           necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
           obcaecati!</p>
       </div>
-      <div>
-        <img src="img/tape.png" alt="Logo de un telefono">
-        <p>Free to download</p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
+      <div class="cajas">
+        <img class="ima" src="img/tape.png" alt="Logo de un telefono">
+        <p class="sub">Free to download</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
           necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
           obcaecati!</p>
       </div>
+      <!-- Final Cajas -->
     </div>
     <!-- Final del Contenido -->
     <!-- Footer -->
