Agrego lista para el sprite

--- a/index.html
+++ b/index.html
@@ -50,102 +50,100 @@
       <div class="cajas">
         <img class="ima" src="img/cell2.png" alt="Logo de un telefono">
         <p class="sub">Fully Responsive</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
-          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
-          obcaecati!</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
       <div class="cajas">
         <img class="ima medida" src="img/lemon.png" alt="Logo de un telefono">
         <p class="sub"> Fully Layered PSD</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
-          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
-          obcaecati!</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
       <div class="cajas">
         <img  class="ima medida2"src="img/file.png" alt="Logo de un telefono">
         <p class="sub">Font Awesome Icons</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
-          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
-          obcaecati!</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
       <div class="cajas">
         <img class="ima medida3" src="img/html.png" alt="Logo de un telefono">
         <p class="sub">HTML3 & CSS3</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
-          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
-          obcaecati!</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
       <div class="cajas">
         <img class="ima medida4" src="img/message.png" alt="Logo de un telefono">
         <p class="sub">Email Template</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
-          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
-          obcaecati!</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
       <div class="cajas">
         <img class="ima" src="img/tape.png" alt="Logo de un telefono">
         <p class="sub">Free to download</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores
-          necessitatibus reiciendis sit at. Architecto sunt odit animi aspernatur inventore at facilis soluta. Voluptas,
-          obcaecati!</p>
+        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
       <!-- Final Cajas -->
     </div>
     <!-- Final del Contenido -->
     <!-- Footer -->
     <div id="footer">
-      <h2>Keep in touch with us</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cum provident consectetur quisquam dolorum delectus amet ducimus maiores commodi aut, obcaecati soluta fuga eligendi voluptas ipsum minus. Necessitatibus, modi eaque!</p>
-      <form action="#">
-          <fieldset>
+      <div class="footer2">
+        <h2 class="titulos color2">Keep in touch with us</h2>
+        <h5 class="titulo2 text3">Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae cum provident consectetur
+          quisquam
+          dolorum delectus amet ducimus maiores commodi aut</h5>
+        <form action="#" id="formulario">
             <input type="search" id="space" value="Enter your email to update">
-            <button id="btn" type="submit" value="submit"><i class="fa fa-search"></i></button>
-          </fieldset>
+            <input type="submit" id="btn">
         </form>
-        <img src="img/share.png" alt="Imagen de las redes sociales Facebook, Twiter, Google más, Pinterest">
+        <ul>
+            <li class="sprite sprite-fb"> <a href="#" target="_blank">facebook</a></li>
+            <li class="sprite sprite-t"> <a href="#" target="_blank">twitter</a></li>
+            <li class="sprite sprite-g"> <a href="#" target="_blank">Google+</a></li>
+            <li class="sprite sprite-p"> <a href="#" target="_blank">pinterest</a></li>
+        </ul>
+      </div>
     </div>
     <!-- Final del Footer -->
     <!-- Sub Footer -->
     <div id="subFooter">
-      <div>
-        <ul>
-          <li>HALOVIENTNAM LTD</li>
-          <li>66 Dang Van ngu,Dong Da</li>
-          <li>Hanoi,Vietnam</li>
-          <li>Contact@halovietnam.com</li>
-          <li>+884 35149182</li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li>Examples</li>
-          <li>Shop</li>
-          <li>License</li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li>Contact</li>
-          <li>About</li>
-          <li>Privacy</li>
-          <li>Terms</li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li>Download</li>
-          <li>Support</li>
-          <li>Documents</li>
-        </ul>
-      </div>
-      <div>
-        <ul>
-          <li>Media</li>
-          <li>Blog</li>
-          <li>Forums</li>
-        </ul>
+      <div class="sub3">
+        <div class="subF1">
+          <ul class="menu3">
+            <li>HALOVIENTNAM LTD</li>
+            <li>66 Dang Van ngu,Dong Da</li>
+            <li>Hanoi,Vietnam</li>
+            <li>Contact@halovietnam.com</li>
+            <li>+884 35149182</li>
+          </ul>
+        </div>
+        <div class="subF2">
+          <ul class="menu3">
+            <li>Examples</li>
+            <li>Shop</li>
+            <li>License</li>
+          </ul>
+        </div>
+        <div class="subF2">
+          <ul class="menu3">
+            <li>Contact</li>
+            <li>About</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+          </ul>
+        </div>
+        <div class="subF2">
+          <ul class="menu3">
+            <li>Download</li>
+            <li>Support</li>
+            <li>Documents</li>
+          </ul>
+        </div>
+        <div class="subF2">
+          <ul class="menu3">
+            <li>Media</li>
+            <li>Blog</li>
+            <li>Forums</li>
+          </ul>
+        </div>
       </div>
     </div>
+    
     <!-- Final del Sub Footer -->
   </div>
   <script src="script.js"></script>
