Agrego links al menu del header

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <img src="img/logo.png" alt="Imagen como con una huella y la letra que dice Tinyone">
         <div class="menu0">
           <ul class="menu">
-            <li> <a href="#">Features</a></li>
-            <li> <a href="#">Support</a></li>
-            <li> <a href="#">Blog</a></li>
+            <li> <a href="#"> <a href="#">Features</a></a></li>
+            <li> <a href="#"> <a href="#"> Support</a></a></li>
+            <li> <a href="#"> <a href="#"> Blog</a></a></li>
           </ul>  
         </div>
       </div>
