Cambios en en el slider

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
     <!-- Slider -->
     <div id="slider">
-      <div class="slider1">
+      <div class="slider1 clearfix">
         <div class="slider2">
           <h2 class="titulos">Inspire your inspiration</h2>
           <h5 class="titulo2">Simple to use for your app, products showcase and your inspiration</h5>
@@ -32,7 +32,7 @@
           <img class="internet" src="img/android.png" alt="Logo de android">
           <img class="internet" src="img/window.png" alt="Logo de windown">
         </div>
-        <div class="imagen">
+        <div class="imagen ">
           <img src="img/cell.png" alt="Imagen de un celular con el logo de la página">
       </div>
       </div>
@@ -62,17 +62,17 @@
         <p class="sub">Font Awesome Icons</p>
         <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
-      <div class="cajas">
+      <div class="cajas ultima">
         <img class="ima medida3" src="img/html.png" alt="Logo de un telefono">
         <p class="sub">HTML3 & CSS3</p>
         <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
-      <div class="cajas">
+      <div class="cajas ultima">
         <img class="ima medida4" src="img/message.png" alt="Logo de un telefono">
         <p class="sub">Email Template</p>
         <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
       </div>
-      <div class="cajas">
+      <div class="cajas ultima">
         <img class="ima" src="img/tape.png" alt="Logo de un telefono">
         <p class="sub">Free to download</p>
         <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
