Agrego elementos para el responsive de tablet

--- a/index.html
+++ b/index.html
@@ -10,14 +10,23 @@
     <!-- Header -->
     <div id="header">
       <div class="header1">
-        <img src="img/logo.png" alt="Imagen como con una huella y la letra que dice Tinyone">
+        <img class="logoImg" src="img/menu1.png" alt="Logo tipico de la hamburgecita">
+        <img class="logo" src="img/logo.png" alt="Imagen como con una huella y la letra que dice Tinyone">
         <div class="menu0">
           <ul class="menu">
-            <li> <a href="#"> <a href="#">Features</a></a></li>
-            <li> <a href="#"> <a href="#"> Support</a></a></li>
-            <li> <a href="#"> <a href="#"> Blog</a></a></li>
-          </ul>  
+            <li><a href="#">Features</a></li>
+            <li><a href="#"> Support</a></li>
+            <li><a href="#"> Blog</a></li>
+          </ul>
         </div>
+        <div class="share clearfix">
+            <ul class="share1" >
+              <li class="sprite2 sprite-fb2"> <a href="#" target="_blank">facebook</a></li>
+              <li class="sprite2 sprite-t2"> <sa href="#" target="_blank">twitter</a></li>
+              <li class="sprite2 sprite-g2"> <a href="#" target="_blank">Google+</a></li>
+              <li class="sprite2 sprite-p2"> <a href="#" target="_blank">pinterest</a></li>
+            </ul> 
+          </div> 
       </div>
     </div>
     <!-- Slider -->
@@ -28,6 +37,11 @@
           <h5 class="titulo2">Simple to use for your app, products showcase and your inspiration</h5>
           <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid sed ad provident, consequatur doloremque
           consequuntur eveniet quis illo voluptatum perferendis nemo officiis, obcaecati repellendus ab. Ratione</p>
+          <ul class="dispositivos">
+            <li class="sprite3 sprite-a"><a href="#" target="_blank"></a></li>
+            <li class="sprite3 sprite-an"><a href="#" target="_blank"></a></li>
+            <li class="sprite3 sprite-w"><a href="#" target="_blank"></a></li>
+          </ul>
           <img class="internet" src="img/apple.png" alt="Logo de apple">
           <img class="internet" src="img/android.png" alt="Logo de android">
           <img class="internet" src="img/window.png" alt="Logo de windown">
@@ -41,42 +55,52 @@
     <!-- Final de Header -->
     <!-- Container -->
     <div id="contenedor">
-      <div class="color">
-        <h2 class="titulos espacio ">Tinyone features</h2>
-        <h5 class="titulo2 espacio2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nisi sit rem nemo aliquid! Sapiente aut
-        reiciendis animi, minus nulla neque necessitatibus</h5 >
+      <div class="conte">
+        <div class="color">
+          <h2 class="titulos espacio ">Tinyone features</h2>
+          <h5 class="titulo2 espacio2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nisi sit rem
+            nemo aliquid! Sapiente aut
+            reiciendis animi, minus nulla neque necessitatibus</h5>
+        </div>
+        <!-- Cajas -->
+        <div class="cajas">
+          <img class="ima" src="img/cell2.png" alt="Logo de un telefono">
+          <p class="sub">Fully Responsive</p>
+          <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
+            asperiores</p>
+        </div>
+        <div class="cajas">
+          <img class="ima medida" src="img/lemon.png" alt="Logo de un telefono">
+          <p class="sub"> Fully Layered PSD</p>
+          <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
+            asperiores</p>
+        </div>
+        <div class="cajas">
+          <img class="ima medida2" src="img/file.png" alt="Logo de un telefono">
+          <p class="sub">Font Awesome Icons</p>
+          <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
+            asperiores</p>
+        </div>
+        <div class="cajas ultima">
+          <img class="ima medida3" src="img/html.png" alt="Logo de un telefono">
+          <p class="sub">HTML3 & CSS3</p>
+          <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
+            asperiores</p>
+        </div>
+        <div class="cajas ultima">
+          <img class="ima medida4" src="img/message.png" alt="Logo de un telefono">
+          <p class="sub">Email Template</p>
+          <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
+            asperiores</p>
+        </div>
+        <div class="cajas ultima">
+          <img class="ima" src="img/tape.png" alt="Logo de un telefono">
+          <p class="sub">Free to download</p>
+          <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
+            asperiores</p>
+        </div>
       </div>
-      <!-- Cajas -->
-      <div class="cajas">
-        <img class="ima" src="img/cell2.png" alt="Logo de un telefono">
-        <p class="sub">Fully Responsive</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
-      </div>
-      <div class="cajas">
-        <img class="ima medida" src="img/lemon.png" alt="Logo de un telefono">
-        <p class="sub"> Fully Layered PSD</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
-      </div>
-      <div class="cajas">
-        <img  class="ima medida2"src="img/file.png" alt="Logo de un telefono">
-        <p class="sub">Font Awesome Icons</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
-      </div>
-      <div class="cajas ultima">
-        <img class="ima medida3" src="img/html.png" alt="Logo de un telefono">
-        <p class="sub">HTML3 & CSS3</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
-      </div>
-      <div class="cajas ultima">
-        <img class="ima medida4" src="img/message.png" alt="Logo de un telefono">
-        <p class="sub">Email Template</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
-      </div>
-      <div class="cajas ultima">
-        <img class="ima" src="img/tape.png" alt="Logo de un telefono">
-        <p class="sub">Free to download</p>
-        <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic asperiores</p>
-      </div>
+     
       <!-- Final Cajas -->
     </div>
     <!-- Final del Contenido -->
@@ -91,7 +115,7 @@
             <input type="search" id="space" value="Enter your email to update">
             <input type="submit" id="btn">
         </form>
-        <ul>
+        <ul class="sprite1">
             <li class="sprite sprite-fb"> <a href="#" target="_blank">facebook</a></li>
             <li class="sprite sprite-t"> <a href="#" target="_blank">twitter</a></li>
             <li class="sprite sprite-g"> <a href="#" target="_blank">Google+</a></li>
