Cambio y agrego elementos al esqueleto

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="share clearfix">
             <ul class="share1" >
               <li class="sprite2 sprite-fb2"> <a href="#" target="_blank">facebook</a></li>
-              <li class="sprite2 sprite-t2"> <sa href="#" target="_blank">twitter</a></li>
+              <li class="sprite2 sprite-t2"> <a href="#" target="_blank">twitter</a></li>
               <li class="sprite2 sprite-g2"> <a href="#" target="_blank">Google+</a></li>
               <li class="sprite2 sprite-p2"> <a href="#" target="_blank">pinterest</a></li>
             </ul> 
@@ -48,14 +48,13 @@
         </div>
         <div class="imagen ">
           <img src="img/cell.png" alt="Imagen de un celular con el logo de la página">
+        </div>
       </div>
-      </div>
-
     </div>
     <!-- Final de Header -->
     <!-- Container -->
     <div id="contenedor">
-      <div class="conte">
+  <div class="conte clearfix ">
         <div class="color">
           <h2 class="titulos espacio ">Tinyone features</h2>
           <h5 class="titulo2 espacio2">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam nisi sit rem
@@ -63,37 +62,40 @@
             reiciendis animi, minus nulla neque necessitatibus</h5>
         </div>
         <!-- Cajas -->
-        <div class="cajas">
+        <div class="cajas dere2">
           <img class="ima" src="img/cell2.png" alt="Logo de un telefono">
           <p class="sub">Fully Responsive</p>
           <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
             asperiores</p>
         </div>
-        <div class="cajas">
+        <div class="cajas cTablet">
           <img class="ima medida" src="img/lemon.png" alt="Logo de un telefono">
           <p class="sub"> Fully Layered PSD</p>
           <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
             asperiores</p>
         </div>
-        <div class="cajas">
+        <div class="cajas izqui">
           <img class="ima medida2" src="img/file.png" alt="Logo de un telefono">
           <p class="sub">Font Awesome Icons</p>
           <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
             asperiores</p>
         </div>
-        <div class="cajas ultima">
+        <div class="cajas ultima dere">
           <img class="ima medida3" src="img/html.png" alt="Logo de un telefono">
           <p class="sub">HTML3 & CSS3</p>
           <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
             asperiores</p>
         </div>
-        <div class="cajas ultima">
+        <div class="cajas ultima cTablet">
           <img class="ima medida4" src="img/message.png" alt="Logo de un telefono">
           <p class="sub">Email Template</p>
           <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
             asperiores</p>
         </div>
-        <div class="cajas ultima">
+        <div class="imagen2 ">
+          <img src="img/cell3.png" alt="Imagen de un celular con el logo de la página">
+        </div>
+        <div class="cajas ultima izqui">
           <img class="ima" src="img/tape.png" alt="Logo de un telefono">
           <p class="sub">Free to download</p>
           <p class="text2">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum, et. Temporibus id eligendi hic
