--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <div class="share clearfix">
             <ul class="share1" >
               <li class="sprite2 sprite-fb2"> <a href="#" target="_blank">facebook</a></li>
-              <li class="sprite2 sprite-t2"> <sa href="#" target="_blank">twitter</a></li>
+              <li class="sprite2 sprite-t2"> <a href="#" target="_blank">Twitter</a></li>
               <li class="sprite2 sprite-g2"> <a href="#" target="_blank">Google+</a></li>
-              <li class="sprite2 sprite-p2"> <a href="#" target="_blank">pinterest</a></li>
+              <li class="sprite2 sprite-p2"> <a href="#" target="_blank">Pinterest</a></li>
             </ul> 
           </div> 
       </div>
@@ -36,7 +36,7 @@
           <h2 class="titulos">Inspire your inspiration</h2>
           <h5 class="titulo2">Simple to use for your app, products showcase and your inspiration</h5>
           <p class="texto">Lorem ipsum dolor sit amet consectetur adipisicing elit. Qui aliquid sed ad provident, consequatur doloremque
-          consequuntur eveniet quis illo voluptatum perferendis nemo officiis, obcaecati repellendus ab. Ratione</p>
+          quis illo voluptatum perferendis nemo officiis, obcaecati repellendus ab. Ratione</p>
           <ul class="dispositivos">
             <li class="sprite3 sprite-a"><a href="#" target="_blank"></a></li>
             <li class="sprite3 sprite-an"><a href="#" target="_blank"></a></li>
